@@ -201,6 +201,7 @@ typedef struct {
 	int	listenport;
 	int	floodtimer;	/* Sending one message takes n seconds. */
 	int	burstsize;	/* We may send up to n messages in a burst. */
+	int	jointries;	/* Times to try joining a channel. */
 	int	getnick;
 	int	getnickinterval;
 	int	antiidle;
